--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,44 @@
+:root {
+  --highlight: #FF57B2;
+  --heading: #F8F8F8;
+  --background: #1A1D23;
+  --info: #BBBBBB;
+  --body: #D7D7D7;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-// TODO
+html {
+  font-family: 'Inter', sans-serif;
+  font-size: 62.5%; // 10px
+}
+
+body {
+  background-color: var(--background);
+  color: var(--body);
+}
+
+time {
+  color: var(--info);
+}
+
+h1, h2, h3, h4, h6, h6 {
+  color: var(--heading);
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
